[package]
name = "king"
version = "0.2.2"
edition = "2021"
description = "short cut functions"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
rand = "0.8.5" 
chrono = "0.4.38"
reqwest = { version = "0.11", features = ["blocking"] }
sha2 = "0.10"